[tool.poetry]
name = "llamagym"
version = "0.1.1"
description = "Fine-tune LLM agents with online reinforcement learning"
authors = ["Rohan Pandey"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.2"
transformers = "^4.36.2"
trl = "^0.7.9"
gymnasium = "^0.29.1"
peft = "^0.7.1"
accelerate = "^0.21.0"
bitsandbytes = "^0.40.0"
textworld = "^1.6.1"
scipy = "^1.12.0"
wandb = "^0.16.4"


[tool.poetry.group.dev.dependencies]
wandb = "^0.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
